Change logic for JPMS detection by Javadoc MOJO
Javadoc MOJO does not need to run `javadoc -help` to check whether
javadoc tool supports JPMS, it can simply check whether there exist
module-info.class in reactor bytecode and if yes, assume JDK supports
JPMS as it was able to compile module-info.java.